change call-to-action to github-contributions, add to nav

--- a/portfolio/homepage/templates/homepage/base.html
+++ b/portfolio/homepage/templates/homepage/base.html
@@ -58,6 +58,8 @@
                 <a href="#portfolio" onclick = $("#menu-close").click(); >My Work</a>
             </li>
             <li>
+                <a href="#github-contributions" onclick = $("#menu-close").click(); >My GitHub Contributions</a>
+            </li>
                 <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
             </li>
             {% endblock nav_links %}
