--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -160,7 +160,7 @@
         <!-- /.container -->
     </section>
 
-    <section class="call-to-action">
+    <section id="github-contributions" class="github-contributions">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-lg-12">
