--- a/portfolio/homepage/static/homepage/sb-portfolio-1.0.4/css/stylish-portfolio.css
+++ b/portfolio/homepage/static/homepage/sb-portfolio-1.0.4/css/stylish-portfolio.css
@@ -214,11 +214,11 @@ hr.small {
 
 /* Call to Action */
 
-.call-to-action {
+.github-contributions {
     padding: 50px 0;
 }
 
-.call-to-action .btn {
+.github-contributions .btn {
     margin: 10px;
 }
 
