add #bio link to nav, add h2 to contact

--- a/portfolio/homepage/templates/homepage/base.html
+++ b/portfolio/homepage/templates/homepage/base.html
@@ -60,6 +60,10 @@
             <li>
                 <a href="#github-contributions" onclick = $("#menu-close").click(); >My GitHub Contributions</a>
             </li>
+            <li>
+                <a href="#bio" onclick = $("#menu-close").click(); >About Me</a>
+            </li>
+            <li>
                 <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
             </li>
             {% endblock nav_links %}
