--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -182,7 +182,7 @@
         </div>
     </section>
 
-    <section class="bio">
+    <section id="bio" class="bio">
       <div class="container">
         <div class="row">
           <h2 class="text-center">About Me</h2>
@@ -206,6 +206,8 @@
     <footer id="contact">
         <div class="container">
             <div class="row">
+              <h2 class="text-center">Contact</h2>
+              <hr class="small">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Evan Palmer</strong></h4>
                     <ul class="list-unstyled">
