change portfolio heading text, fix a-tag targets

--- a/portfolio/homepage/templates/homepage/index.html
+++ b/portfolio/homepage/templates/homepage/index.html
@@ -77,18 +77,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>My Work</h2>
+                    <h2>Some of My Work</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item thumbnail">
-                                <a href="http://raiseeffect.org" target="_blank">
+                                <a href="http://raiseeffect.org" target="blank_">
                                     <img class="img-portfolio img-responsive" src="{% static 'homepage/images/re-lg-thumbnail.png' %}">
                                 </a>
                                 <div>
                                   <h3 class="portfolio-item-heading">Raise Effect API</h3>
                                   <p class="portfolio-item-text center-block">
-                                    The Python/Flask REST API that powers <a target="_blank" href="http://raiseeffect.org/">raiseeffect.org</a>,
+                                    The Python/Flask REST API that powers <a target="blank_" href="http://raiseeffect.org/">raiseeffect.org</a>,
                                     a <a href="http://www.hackoregon.org/">Hack Oregon</a> open-source project.
                                   </p>
                                   <div class="btn-group" role="group" aria-label="thumbnail-button-group">
